--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^3.1.3",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "helmet": "^3.4.0",
     "lru-cache": "^4.0.2",
     "pug": "2.0.0-beta11",
     "serialize-javascript": "^1.3.0",
