--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,23 +2,23 @@
   "name": "Vue Hackernews 2.0",
   "short_name": "Vue HN",
   "icons": [{
-      "src": "/public/logo-120.png",
+      "src": "/logo-120.png",
       "sizes": "120x120",
       "type": "image/png"
     }, {
-      "src": "/public/logo-144.png",
+      "src": "/logo-144.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "/public/logo-152.png",
+      "src": "/logo-152.png",
       "sizes": "152x152",
       "type": "image/png"
     }, {
-      "src": "/public/logo-192.png",
+      "src": "/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },{
-      "src": "/public/logo-384.png",
+      "src": "/logo-384.png",
       "sizes": "384x384",
       "type": "image/png"
     }],
